k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recrawler-deployment
  labels:
    app: recrawler
spec:
  selector:
    matchLabels:
      app: recrawler
      role: web
  template:
    metadata:
      labels:
        app: recrawler
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/recrawler
        imagePullPolicy: IfNotPresent
        name: recrawler
        ports:
        - containerPort: 8000
