k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: recrawler-ingress
spec:
  rules:
  - host: recrawler
    http:
      paths:
      - backend:
          serviceName: recrawler-service
          servicePort: 80
